--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^3.0.1",
     "bootstrap": "^4.3.1",
     "firebase": "^7.3.0",
     "jquery": "^3.4.1",
