--- a/package.json
+++ b/package.json
@@ -32,15 +32,22 @@
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "node": true,
+      "browser": true,
+      "es6": true
     },
     "extends": [
       "plugin:vue/essential",
       "eslint:recommended"
     ],
+    "plugins": [
+      "vue"
+    ],
     "rules": {},
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "babel-eslint",
+      "ecmaVersion": 2018,
+      "sourceType": "module"
     }
   },
   "postcss": {
