--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@tinymce/tinymce-vue": "^3.0.1",
     "bootstrap": "^4.3.1",
-    "firebase": "^7.3.0",
+    "core-js": "^3.6.4",
+    "firebase": "^7.14.3",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "register-service-worker": "^1.6.2",
@@ -20,13 +21,13 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-plugin-pwa": "^4.0.0",
     "@vue/cli-plugin-router": "^4.1.2",
     "@vue/cli-plugin-vuex": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
   },
