--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "register-service-worker": "^1.6.2",
+    "vanilla-lazyload": "^15.2.0",
     "vue": "^2.6.10",
     "vue-headful": "^2.1.0",
     "vue-router": "^3.1.3",
