--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "vanilla-lazyload": "^15.2.0",
     "vue": "^2.6.11",
     "vue-headful": "^2.1.0",
-    "vue-router": "^3.1.6",
-    "vuex": "^3.3.0"
+    "vue-router": "^3.3.4",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.1",
@@ -32,5 +32,9 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "prettier": {
+    "singleQuote": true,
+    "semi": false
+  }
 }
