--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
   },
   "dependencies": {
     "@tinymce/tinymce-vue": "^3.2.1",
-    "bootstrap": "^4.5.0",
-    "core-js": "^3.6.4",
+    "bootstrap": "^5.0.0-alpha1",
     "firebase": "^7.14.3",
-    "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "register-service-worker": "^1.7.1",
     "vanilla-lazyload": "^15.2.0",
@@ -21,7 +19,6 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-pwa": "^4.3.1",
     "@vue/cli-plugin-router": "^4.3.1",
     "@vue/cli-plugin-vuex": "^4.3.1",
