--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@tinymce/tinymce-vue": "^3.2.1",
     "bootstrap": "^5.0.0-alpha1",
     "firebase": "^7.14.3",
     "popper.js": "^1.16.1",
@@ -15,13 +14,11 @@
     "vanilla-lazyload": "^15.2.0",
     "vue": "^2.6.11",
     "vue-headful": "^2.1.0",
-    "vue-router": "^3.4.0",
-    "vuex": "^3.5.1"
+    "vue-router": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-pwa": "^4.4.6",
     "@vue/cli-plugin-router": "^4.4.6",
-    "@vue/cli-plugin-vuex": "^4.4.6",
     "@vue/cli-service": "^4.4.6",
     "vue-template-compiler": "^2.6.11"
   },
