--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "popper.js": "^1.16.1",
     "register-service-worker": "^1.7.1",
     "vanilla-lazyload": "^15.2.0",
-    "vue": "^2.6.11",
+    "vue": "^3.0.0-0",
     "vue-headful": "^2.1.0",
-    "vue-router": "^3.4.0"
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-pwa": "^4.4.6",
-    "@vue/cli-plugin-router": "^4.4.6",
-    "@vue/cli-service": "^4.4.6",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-plugin-pwa": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0-0"
   },
   "browserslist": [
     "> 1%",
