--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   ],
   "prettier": {
     "singleQuote": true,
-    "semi": false
+    "semi": false,
+    "jsxBracketSameLine": true,
+    "arrowParens": "avoid",
+    "trailingComma": "none"
   }
 }
