--- a/package.json
+++ b/package.json
@@ -8,18 +8,17 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.0-alpha2",
-    "popper.js": "^1.16.1",
-    "register-service-worker": "^1.7.1",
-    "vanilla-lazyload": "^15.2.0",
-    "vue": "^3.0.0-0",
+    "@popperjs/core": "^2.6.0",
+    "register-service-worker": "^1.7.2",
+    "vue": "^3.0.4",
     "vue-headful": "^2.1.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0-0"
+    "@vue/cli-plugin-pwa": "^4.5.9",
+    "@vue/cli-plugin-router": "^4.5.9",
+    "@vue/cli-service": "^4.5.9",
+    "@vue/compiler-sfc": "^3.0.4"
   },
   "browserslist": [
     "> 1%",
