--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "bootstrap": "^5.0.0-alpha2",
-    "@popperjs/core": "^2.6.0",
+    "bootstrap": "^5.0.0-beta3",
+    "@popperjs/core": "^2.9.1",
     "register-service-worker": "^1.7.2",
     "vue": "^3.0.4",
     "vue-headful": "^2.1.0",
