--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
     "@popperjs/core": "^2.9.1",
     "bootstrap": "^5.0.0-beta3",
     "register-service-worker": "^1.7.2",
-    "vue": "^3.0.4",
-    "vue-headful": "^2.1.0",
-    "vue-router": "^4.0.6"
+    "vue": "^3.0.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-pwa": "^4.5.9",
-    "@vue/cli-plugin-router": "^4.5.9",
     "@vue/cli-service": "^4.5.9",
     "@vue/compiler-sfc": "^3.0.4"
   },
