--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,5 +16,5 @@
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#ea5455"
+  "theme_color": "#ffffff"
 }
