--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.1",
-    "bootstrap": "^5.0.0-beta3",
+    "bootstrap": "^5.0.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.0.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-pwa": "^4.5.9",
-    "@vue/cli-service": "^4.5.9",
+    "@vue/cli-service": "^4.5.13",
     "@vue/compiler-sfc": "^3.0.4"
   },
   "browserslist": [
